Fix focus box for hyperlinks and text box in protocol handler section
Issue:
1. Focus box was not visible on hyperlinks in the protocol handler section in the Application Tool when tabbing to it.
2. The focus box color for the text box in the protocol handler section did not follow the color of other text boxes in DevTools
GIF of issue: https://drive.google.com/file/d/1bLe_GXtzt1xzidSmaeJf4dj338sfBsKT/view?usp=sharing

Fix:
1. Focus box is now visible for hyperlinks when tabbing to it
2. The focus box color for the text box now matches other text boxes in DevTools

Bug: 1336012: Focus box not visible when tabbing to hyperlinks in Protocol Handler section in Manifest Application Tool

--- a/front_end/panels/application/components/protocolHandlersView.css
+++ b/front_end/panels/application/components/protocolHandlersView.css
@@ -11,12 +11,21 @@
   padding: 2px 0; /* adjust focus ring size */
 }
 
+.devtools-link:focus-visible {
+  outline-width: unset;
+}
+
 input.devtools-text-input[type="text"] {
   padding: 3px 6px;
   margin-left: 4px;
   margin-right: 4px;
   width: 250px;
   height: 25px;
+}
+
+input.devtools-text-input[type="text"]:focus {
+  box-shadow: var(--legacy-focus-ring-active-shadow);
+  outline-width: 0;
 }
 
 .protocol-handlers-row {
